# contextdb

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  book.toml  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml  main-image.yml  release-dry-run.yml  release.yml
benches/: acceptance_three_paradigm_query.rs  engine_full_throughput.rs  engine_throughput.rs  indexed_scan_filter_cg_entity_list.rs  indexed_scan_filter_file_backed_open.rs  indexed_scan_filter_in_memory_pk_inserts.rs  indexed_scan_filter_non_id_pk_inserts.rs  indexed_scan_filter_pk_inserts.rs  mixed_workflows_pr.rs  parser_throughput.rs  rank_policy_recall.rs  server_sync_system.rs  server_throughput.rs  sigterm_drain_in_flight_persistence.rs  sql_surface_distinct.rs  subscriptions_pr.rs  sync_pr.rs  tier1_acl_overhead.rs  tier1_atomic_visibility_under_contention.rs  tier1_context_guard_overhead.rs  tier1_event_bus_throughput.rs  tier1_scope_label_overhead.rs  tier2_commit_validate_overhead.rs  tier2_fk_revalidation_overhead.rs  tier2_state_machine_overhead.rs  trigger_throughput.rs
benches/common/: mod.rs  process.rs  scale.rs  sync.rs  workloads.rs
crates/contextdb-cli/: Cargo.toml
crates/contextdb-cli/src/: auto_sync.rs  formatter.rs  lib.rs  main.rs  repl.rs  testing.rs
crates/contextdb-cli/tests/: cli_immutable_column_tests.rs
crates/contextdb-core/: Cargo.toml
crates/contextdb-core/src/: error.rs  lib.rs  memory.rs  schema.rs  table_meta.rs  traits.rs  types.rs
crates/contextdb-core/tests/: atomic_wrapper_audit.rs  bincode_serde_path_audit.rs  memory_safety_tests.rs  timestamp_audit.rs  txid_newtype_tests.rs  type_spread_audit.rs
crates/contextdb-core/tests/fixtures/compile_fail/: assign_u64_to_lsn.rs  assign_u64_to_lsn.stderr  assign_u64_to_rowid.rs  assign_u64_to_rowid.stderr  assign_u64_to_snapshotid.rs  assign_u64_to_snapshotid.stderr  assign_u64_to_txid.rs  assign_u64_to_txid.stderr  assign_u64_to_wallclock.rs  assign_u64_to_wallclock.stderr  lsn_into_txid.rs  lsn_into_txid.stderr  lsn_into_wallclock.rs  lsn_into_wallclock.stderr  no_from_u64_for_lsn.rs  no_from_u64_for_lsn.stderr  no_from_u64_for_row_id.rs  no_from_u64_for_row_id.stderr  no_from_u64_for_snapshot_id.rs  no_from_u64_for_snapshot_id.stderr  no_from_u64_for_txid.rs  no_from_u64_for_txid.stderr  no_from_u64_for_wallclock.rs  no_from_u64_for_wallclock.stderr  rowid_into_lsn.rs  rowid_into_lsn.stderr  rowid_into_txid.rs  rowid_into_txid.stderr  snapshotid_into_rowid.rs  snapshotid_into_rowid.stderr  snapshotid_into_wallclock.rs  snapshotid_into_wallclock.stderr  txid_into_lsn.rs  txid_into_lsn.stderr  txid_into_snapshotid.rs  txid_into_snapshotid.stderr  wallclock_into_lsn.rs  wallclock_into_lsn.stderr  wallclock_into_txid.rs  wallclock_into_txid.stderr
crates/contextdb-core/tests/fixtures/compile_pass/: bridge_from_tx_external.rs
crates/contextdb-engine/: Cargo.toml
crates/contextdb-engine/examples/: peak_rss_harness.rs
crates/contextdb-engine/src/: cli_render.rs  composite_store.rs  database.rs  executor.rs  lib.rs  persistence.rs  persistent_store.rs  plugin.rs  rank_formula.rs  schema_enforcer.rs  sync.rs  sync_types.rs
crates/contextdb-engine/src/database/: cron.rs  event_bus.rs  gate.rs  trigger.rs
crates/contextdb-engine/tests/: cli_render_tests.rs  engine_tests.rs  hnsw_rebuild_determinism_tests.rs  named_vector_planner_tests.rs  per_index_independent_progress_tests.rs  sql_surface_tests.rs  sql_tests.rs
crates/contextdb-graph/: Cargo.toml
crates/contextdb-graph/src/: lib.rs  mem.rs  store.rs
crates/contextdb-graph/tests/: graph_tests.rs
crates/contextdb-hnsw/: Cargo.toml  Changes.md  README.md
crates/contextdb-hnsw/src/: api.rs  filter.rs  flatten.rs  hnsw.rs  hnswio.rs  lib.rs  libext.rs
crates/contextdb-parser/: Cargo.toml
crates/contextdb-parser/src/: ast.rs  grammar.pest  lib.rs  parser.rs
crates/contextdb-parser/tests/: parser_immutable_tests.rs  parser_tests.rs
crates/contextdb-planner/: Cargo.toml
crates/contextdb-planner/src/: lib.rs  plan.rs  planner.rs
crates/contextdb-planner/tests/: planner_tests.rs
crates/contextdb-relational/: Cargo.toml
crates/contextdb-relational/src/: lib.rs  mem.rs  store.rs
crates/contextdb-relational/tests/: relational_tests.rs
crates/contextdb-server/: Cargo.toml
crates/contextdb-server/src/: chunking.rs  error.rs  lib.rs  main.rs  protocol.rs  subjects.rs  sync_client.rs  sync_plugin.rs  sync_server.rs
crates/contextdb-server/tests/: docker-compose.yml  nats.conf  protocol_newtype_roundtrip.rs  sync_integration.rs
crates/contextdb-tx/: Cargo.toml
crates/contextdb-tx/src/: lib.rs  manager.rs  write_set.rs
crates/contextdb-tx/tests/: tx_safety_tests.rs  tx_tests.rs
crates/contextdb-vector/: Cargo.toml
crates/contextdb-vector/src/: cosine.rs  hnsw.rs  lib.rs  mem.rs  quantized.rs  store.rs  test_seam.rs
crates/contextdb-vector/tests/: vector_tests.rs
docs/: SUMMARY.md  architecture.md  benchmarking.md  cli.md  getting-started.md  query-language.md  usage-scenarios.md  why-contextdb.md
tests/: acceptance.rs  integration.rs
tests/acceptance/: auto_stamped_txid.rs  cli_ux.rs  common.rs  common_tracing.rs  composite_foreign_key.rs  composite_unique_concurrent_update.rs  concurrent_unique_revalidation.rs  conditional_update_serializable.rs  contributing.rs  cross_platform.rs  data_integrity.rs  db_lock_visibility.rs  deployment.rs  dev_experience.rs  disk_budget.rs  docs_immutable_column.rs  docs_query_language_auto_indexes.rs  embedding.rs  engine_cron.rs  event_bus.rs  event_bus_self_join.rs  foreign_key_delete_race.rs  handle_scope_constraint.rs  infra_failures.rs  long_running.rs  memory_accounting.rs  multi_edge.rs  multi_table_atomic_visibility.rs  observation_trigger.rs  persistence.rs  precommit_context_guard.rs  principal_scoped_handle.rs  query_surface.rs  schema_evolution.rs  schema_lifecycle.rs  single_pk_concurrent_update.rs  state_machine_concurrent_legal_transition.rs  sync.rs  (+6 more)
theme/: custom.css  site-nav.js
(+46 files in other folders)
