[workspace]
resolver = "2"
members = [
    "crates/contextdb-core",
    "crates/contextdb-tx",
    "crates/contextdb-relational",
    "crates/contextdb-graph",
    "crates/contextdb-vector",
    "crates/contextdb-parser",
    "crates/contextdb-planner",
    "crates/contextdb-engine",
    "crates/contextdb-server",
    "crates/contextdb-cli",
]
default-members = ["crates/contextdb-engine", "crates/contextdb-cli", "crates/contextdb-server"]

[workspace.package]
authors = ["John Cyriac <lucidprogrammer@hotmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/context-graph-ai/contextdb"
description = "Embedded database for agentic memory — relational, graph, and vector under unified MVCC transactions"

[workspace.dependencies]
uuid = { version = "1.22.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
roaring = "0.11.3"
parking_lot = "0.12.5"
tracing = "0.1.44"
pest = "2.8.6"
pest_derive = "2.8.6"
rustyline = "17.0.2"
async-nats = "0.46"
tokio = { version = "1", features = ["full"] }
rmp-serde = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redb = "3"
bincode = { version = "2", features = ["serde"] }
tempfile = "3"
hnsw_rs = "0.3"
anndists = "0.1"
time = { version = "0.3", features = ["formatting", "parsing"] }
