[package]
name = "contextdb-cli"
version = "0.2.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive CLI for contextdb — explore relational, graph, and vector queries in a REPL"

[dependencies]
contextdb-engine = { path = "../contextdb-engine", version = "0.2" }
contextdb-core = { path = "../contextdb-core", version = "0.2" }
contextdb-server = { path = "../contextdb-server", version = "0.2" }
rustyline.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
contextdb-parser = { path = "../contextdb-parser", version = "0.2" }
