[package]
name = "contextdb-cli"
version = "0.3.4"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Interactive CLI for contextdb — explore relational, graph, and vector queries in a REPL"

[lib]
name = "contextdb_cli"
path = "src/lib.rs"

[[bin]]
name = "contextdb-cli"
path = "src/main.rs"

[dependencies]
contextdb-engine = { path = "../contextdb-engine", version = "0.3" }
contextdb-core = { path = "../contextdb-core", version = "0.3" }
contextdb-server = { path = "../contextdb-server", version = "0.3" }
rustyline.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
contextdb-parser = { path = "../contextdb-parser", version = "0.3" }
