[package]
name = "contextdb-core"
version = "0.2.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, and error types for contextdb"

[dependencies]
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
roaring.workspace = true
