[package]
name = "contextdb-core"
version = "0.3.3"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Core types, traits, and error types for contextdb"

[dependencies]
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
roaring.workspace = true

[dev-dependencies]
bincode.workspace = true
trybuild = "1"
walkdir = "2"
toml = "0.8"
regex = "1"
contextdb-engine = { path = "../contextdb-engine" }
contextdb-server = { path = "../contextdb-server" }
contextdb-tx = { path = "../contextdb-tx" }
rmp-serde = "1"
serde_bytes = "0.11"
serde_json.workspace = true
tempfile.workspace = true
