[package]
name = "contextdb-engine"
version = "0.3.4"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Embedded database engine for agentic memory — relational, graph, and vector under unified MVCC transactions"

[dependencies]
contextdb-core = { path = "../contextdb-core", version = "0.3" }
contextdb-tx = { path = "../contextdb-tx", version = "0.3" }
contextdb-relational = { path = "../contextdb-relational", version = "0.3" }
contextdb-graph = { path = "../contextdb-graph", version = "0.3" }
contextdb-vector = { path = "../contextdb-vector", version = "0.3" }
contextdb-parser = { path = "../contextdb-parser", version = "0.3" }
contextdb-planner = { path = "../contextdb-planner", version = "0.3" }
roaring.workspace = true
uuid.workspace = true
parking_lot.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
redb = { workspace = true }
bincode = { workspace = true }
smallvec = "1"
time.workspace = true

[dev-dependencies]
contextdb-server = { path = "../contextdb-server" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
async-nats = "0.46"
testcontainers = "0.27"
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }
regex = "1"
tracing-subscriber = "0.3"

[[test]]
name = "integration"
path = "../../tests/integration.rs"

[[test]]
name = "acceptance"
path = "../../tests/acceptance.rs"

[[bench]]
name = "engine_throughput"
harness = false
path = "../../benches/engine_throughput.rs"

[[bench]]
name = "engine_full_throughput"
harness = false
path = "../../benches/engine_full_throughput.rs"

[[bench]]
name = "mixed_workflows_pr"
harness = false
path = "../../benches/mixed_workflows_pr.rs"

[[bench]]
name = "subscriptions_pr"
harness = false
path = "../../benches/subscriptions_pr.rs"

[[bench]]
name = "rank_policy_recall"
harness = false
path = "../../benches/rank_policy_recall.rs"
