[package]
name = "contextdb-graph"
version = "0.3.2"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Graph executor for contextdb — bounded BFS, DAG enforcement, typed edges"

[dependencies]
contextdb-core = { path = "../contextdb-core", version = "0.3" }
contextdb-tx = { path = "../contextdb-tx", version = "0.3" }
parking_lot.workspace = true
uuid.workspace = true
