[package]
name = "contextdb-hnsw"
version = "1.0.0"
edition = "2024"
authors = [
    "jeanpierre.both@gmail.com",
    "John Cyriac <lucidprogrammer@hotmail.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/context-graph-ai/contextdb"
readme = "README.md"
description = "ContextDB-owned HNSW engine based on hnsw_rs 0.3.4 with deterministic seeded builds"
keywords = ["algorithms", "ann", "hnsw", "vector"]
categories = ["algorithms", "data-structures"]
autobins = false
autoexamples = false
autotests = false
autobenches = false

[features]
default = []
stdsimd = ["anndists/stdsimd"]

[lib]
name = "hnsw_rs"
path = "src/lib.rs"

[dependencies]
anndists.workspace = true
anyhow = "1.0"
bincode = "1.3"
cfg-if = "1.0"
cpu-time = "1.0"
env_logger = "0.11"
hashbrown = "0.15"
indexmap = "2.12"
lazy_static = "1.5"
log = "0.4"
mmap-rs = "0.7"
num-traits = "0.2"
num_cpus = "1.16"
parking_lot = "0.12"
rand = "0.9"
rayon = "1.11"
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
