[package]
name = "contextdb-parser"
version = "0.3.1"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "SQL parser for contextdb with GRAPH_TABLE and vector extensions"

[dependencies]
contextdb-core = { path = "../contextdb-core", version = "0.3" }
pest.workspace = true
pest_derive.workspace = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "parser_throughput"
harness = false
path = "../../benches/parser_throughput.rs"
