[package]
name = "contextdb-planner"
version = "0.3.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rule-based query planner for contextdb"

[dependencies]
contextdb-core = { path = "../contextdb-core", version = "0.3" }
contextdb-parser = { path = "../contextdb-parser", version = "0.3" }
