[package]
name = "contextdb-planner"
version = "1.0.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Rule-based query planner for contextdb"

[dependencies]
contextdb-core = { path = "../contextdb-core", version = "1.0" }
contextdb-parser = { path = "../contextdb-parser", version = "1.0" }
