[package]
name = "contextdb-relational"
version = "0.3.4"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Relational executor for contextdb — scan, insert, upsert, delete"

[dependencies]
contextdb-core = { path = "../contextdb-core", version = "0.3" }
contextdb-tx = { path = "../contextdb-tx", version = "0.3" }
parking_lot.workspace = true
uuid.workspace = true
