[package]
name = "contextdb-server"
version = "0.2.0"
edition = "2024"

[dependencies]
contextdb-engine = { path = "../contextdb-engine" }
contextdb-core = { path = "../contextdb-core" }
uuid.workspace = true
tokio.workspace = true
async-nats.workspace = true
rmp-serde.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
thiserror.workspace = true
futures-util = "0.3"
serde_bytes = "0.11"

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.27"
