[package]
name = "contextdb-server"
version = "0.2.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sync server for contextdb — NATS-based replication with conflict resolution"

[dependencies]
contextdb-engine = { path = "../contextdb-engine", version = "0.2" }
contextdb-core = { path = "../contextdb-core", version = "0.2" }
contextdb-tx = { path = "../contextdb-tx", version = "0.2" }
uuid.workspace = true
tokio.workspace = true
async-nats.workspace = true
rmp-serde.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
thiserror.workspace = true
futures-util = "0.3"
serde_bytes = "0.11"

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.27"
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
tempfile = "3"
uuid = { workspace = true }
tokio.workspace = true
roaring.workspace = true

[[bench]]
name = "server_throughput"
harness = false
path = "../../benches/server_throughput.rs"

[[bench]]
name = "server_sync_system"
harness = false
path = "../../benches/server_sync_system.rs"

[[bench]]
name = "sync_pr"
harness = false
path = "../../benches/sync_pr.rs"
