[package]
name = "contextdb-tx"
version = "0.3.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MVCC transaction manager for contextdb"

[dependencies]
contextdb-core = { path = "../contextdb-core", version = "0.3" }
parking_lot.workspace = true
