[package]
name = "contextdb-tx"
version = "0.3.2"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "MVCC transaction manager for contextdb"

[dependencies]
contextdb-core = { path = "../contextdb-core", version = "0.3" }
parking_lot.workspace = true
