[package]
name = "contextdb-vector"
version = "0.2.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Vector executor for contextdb — cosine similarity, HNSW indexing, pre-filtered search"

[dependencies]
contextdb-core = { path = "../contextdb-core" }
contextdb-tx = { path = "../contextdb-tx" }
roaring.workspace = true
parking_lot.workspace = true
hnsw_rs.workspace = true
anndists.workspace = true
