[package]
name = "contextdb-vector"
version = "0.3.1"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Vector executor for contextdb — cosine similarity, HNSW indexing, pre-filtered search"

[dependencies]
contextdb-core = { path = "../contextdb-core", version = "0.3" }
contextdb-tx = { path = "../contextdb-tx", version = "0.3" }
roaring.workspace = true
parking_lot.workspace = true
hnsw_rs.workspace = true
anndists.workspace = true
